welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
	if (a+b=20) {
             ^close10:6: error: type mismatch;
 found   : Unit
 required: Int
	}else if (Math.abs(b-10)<Math.abs(a-10)) {
              ^